--- a/source/sections/hero.astro
+++ b/source/sections/hero.astro
@@ -1,7 +1,8 @@
 ---
 import { getTranslations } from "@modules/i18n";
 /* import { Badge } from "@components/base";
- */ import { Icon } from "astro-icon/components";
+  import { Icon } from "astro-icon/components";
+  */
 
 // Retrieve the localized strings for the hero section.
 const { locale } = Astro.locals;
@@ -22,28 +23,30 @@ const t = translations.sections.hero;
 </script>
 
 <section
-  class="content-center"
   data-scroll-away
+  class="mx-auto grid max-w-screen-2xl grid-cols-10 items-center p-12"
 >
-  <h1 class="animate-fade-up font-header">
-    <span class="block text-lg font-semibold text-foreground/50"
-      >{t.greeting}</span
-    >
-    <span class="block text-5xl/tight font-extrabold tracking-wider opacity-85"
-      >Ivan Porto</span
-    >
-    <span class="mt-4 block text-xl/5 font-bold text-foreground/50"
-      >I'm a <span class="text-primary/80">software</span> developer.</span
-    >
-  </h1>
+  <div class="col-span-4">
+    <h1 class="animate-fade-up font-header">
+      <span class="block text-lg font-semibold text-foreground/50"
+        >{t.greeting}</span
+      >
+      <span
+        class="block text-7xl/tight font-extrabold tracking-wider opacity-90"
+        >Ivan Porto</span
+      >
+      <span class="mt-4 block text-3xl/tight font-bold text-foreground/50"
+        >I'm a <span class="text-primary/80">software</span> developer.</span
+      >
+    </h1>
 
-  <p
-    class="mt-16 max-w-3xl animate-fade-up text-balance text-base text-foreground/65 animate-delay-300"
-    set:html={t.introduction}
-    data-hero-p
-  />
+    <p
+      class="mt-16 max-w-2xl animate-fade-up text-balance text-base text-foreground/65 animate-delay-300"
+      set:html={t.introduction}
+      data-hero-p
+    />
 
-  <!-- <Badge
+    <!-- <Badge
     hoverGlow
     class="animate-fade-up animate-delay-700 mt-8 w-fit select-none gap-3 px-4 py-2 text-xs"
   >
@@ -58,7 +61,7 @@ const t = translations.sections.hero;
     <span>Available to work</span>
   </Badge> -->
 
-  <button
+    <!-- <button
     onclick={'alert("Show Contact Form")'}
     class="relative mt-10 inline-flex h-12 animate-fade-up items-center justify-center gap-4 whitespace-nowrap rounded-md bg-primary px-6 text-sm font-bold text-primary-foreground transition will-change-transform animate-delay-500 hover:scale-105 focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 focus:ring-offset-ring"
   >
@@ -72,10 +75,17 @@ const t = translations.sections.hero;
       class="size-[1.2em]"
     />
     <span> Get In Touch </span>
-  </button>
+  </button> -->
+  </div>
+
+  <div class="col-span-6"></div>
 </section>
 
 <style>
+  section {
+    min-height: var(--content-height);
+  }
+
   [data-hero-p] {
     /** If pretty is supported it will override "balance". */
     text-wrap: balance;
