--- a/source/sections/work.astro
+++ b/source/sections/work.astro
@@ -17,7 +17,7 @@ const t = translations.sections.experience;
 ---
 
 <ObservedSection
-  title="Where I've Worked"
+  title="Where I've worked"
   order={1}
   id="experience"
   class="mx-auto max-w-screen-xl px-8 lg:px-16"
