--- a/source/sections/work.astro
+++ b/source/sections/work.astro
@@ -20,14 +20,14 @@ const t = translations.sections.experience;
   title="Where I've worked"
   order={1}
   id="experience"
-  class="mx-auto max-w-screen-xl px-8 lg:px-16"
+  class="mx-auto max-w-screen-xl px-8 md:px-12 lg:px-16"
   aria-label="Experience"
 >
   <div class="ml-2 flex w-full lg:ml-8">
     <Timeline
       client:idle
       itemCount={2}
-      class="pr-2"
+      class="py-12 pr-2"
       as="ul"
     >
       {
